# ittapi

./: .buildinfo  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  buildall.py  genindex.html  include  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/src/: api-support.doctree  build.doctree  compile-and-link-with-itt-api.doctree  instrument-your-application.doctree  itt-api-reference.doctree  itt-api-support.doctree  jit-api-reference.doctree  jit-api-support.doctree  minimize-itt-api-overhead.doctree  overview.doctree  ref_collector.doctree  using-jit-api.doctree
.github/: dependabot.yml
.github/workflows/: build.yml  ci_itt_python.yml  codeql.yml  deploy-docs.yml  main.yml  poc.yml  release.yml  release_test.yml  rust.yml
_sources/src/: api-support.rst.txt  compile-and-link-with-itt-api.rst.txt  itt-api-reference.rst.txt  jit-api-reference.rst.txt  minimize-itt-api-overhead.rst.txt
cmake/: ittapiConfig.cmake.in
docs/: README.md  conf.py  index.rst
docs/gpa-user-guide/: clock-domain-api.rst  compile-and-link-with-itt-api.rst  counter-api.rst  domain-api.rst  gpa-user-guide.rst  instrumenting-your-application.rst  minimizing-itt-api-overhead.rst  relation-api.rst  string-handle-api.rst  task-api.rst  thread-naming-api.rst
docs/src/: api-support.rst  build.rst  compile-and-link-with-itt-api.rst  instrument-your-application.rst  itt-api-reference.rst  itt-api-support.rst  jit-api-support.rst  minimize-itt-api-overhead.rst  overview.rst  ref_collector.rst  using-jit-api.rst
docs/vtune-user-guide/: api-support.rst  attach-itt-apis-to-a-launched-application.rst  basic-usage-and-configuration.rst  collection-control-api.rst  compile-and-link-with-ittapi.rst  configure-your-build-system.rst  context-metadata-api.rst  counter-api.rst  domain-api.rst  event-api.rst  frame-api.rst  histogram-api.rst  ijit_-getnewmethodid.rst  ijit_isprofilingactive.rst  ijit_notifyevent.rst  instrument-your-application.rst  instrumentation-and-tracing-technology-api-reference.rst  jit-profiling-api-reference.rst  jit-profiling-api.rst  load-module-api.rst  memory-allocation-apis.rst  minimize-itt-api-overhead.rst  string-handle-api.rst  support-for-instrumentation-and-tracing-technology-api-itt-api.rst  task-api.rst  thread-naming-api.rst  user-defined-synchronization-api.rst  using-jit-profiling-api.rst  view-instrumentation-and-tracing-technology-itt-api-task-data-in-intel-vtune-profiler.rst  vtune-user-guide.rst
include/: AdvisorAnnotate.cs  advisor-annotate.h  ittnotify-zca.h  ittnotify.f90  ittnotify.h  jitprofiling.h  libittnotify.h
include/fortran/: advisor_annotate.f90
include/legacy/: ittnotify.h
ittapi-rs/: .gitignore  Cargo.toml  README.md  build.rs  deny.toml
ittapi-rs/integration-tests/: README.md
ittapi-rs/ittapi/: Cargo.toml  README.md
ittapi-rs/ittapi-sys/: Cargo.toml  README.md  build.rs
ittapi-rs/ittapi/src/: domain.rs  event.rs  jit.rs  lib.rs  string.rs  util.rs
ittapi-rs/ittnotify/: ittptmark64.S
ittapi-rs/scripts/: copy-c-library.ps1
ittapi-rs/src/: ittnotify_bindings.rs  jitprofiling_bindings.rs  lib.rs
pyitt/: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
pyitt/pyitt.native/: collection_control.cpp  domain.cpp  (+7 more)
python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
python/itt_NERSC/: __init__.py  collection_control.py  domain.py  pt_region.py  task.py
python/ittapi/: __init__.py  collection_control.py  domain.py  event.py  id.py  pt_region.py  string_handle.py  task.py  thread_naming.py
python/ittapi.native/: collection_control.cpp  collection_control.hpp  domain.cpp  domain.hpp  event.cpp  event.hpp  id.cpp  id.hpp  ittapi.cpp  pt_region.cpp  pt_region.hpp  string_handle.cpp  string_handle.hpp  task.cpp  task.hpp  thread_naming.cpp  thread_naming.hpp
python/ittapi.native/extensions/: python.cpp  python.hpp  string.cpp  string.hpp
python/ittapi/compat/: README.md  __init__.py  collection_control.py  domain.py  pt_region.py  task.py
python/pyitt/: __init__.py  domain.py  task.py
python/pyitt.native/: event.cpp  thread_naming.cpp
python/pyitt.native/extensions/: python.cpp  string.cpp  string.hpp
python/samples/: NERSC_collection_control_sample.py  collection_control_sample.py  compat_collection_control_sample.py  event_sample.py  task_sample.py  thread_naming_sample.py  vtune_tool.py  workload.py
python/utest/: NERSC_test_collection_control.py  NERSC_test_domain.py  NERSC_test_pt_region.py  NERSC_test_task.py  compat_test_collection_control.py  compat_test_domain.py  compat_test_pt_region.py  compat_test_task.py  test_collection_control.py  test_compat_collection_control.py  test_compat_domain.py  test_domain.py  test_event.py  test_id.py  test_pt_region.py  test_string_handle.py  test_task.py  test_thread_naming.py
python/utest/ittapi_native_mock/: __init__.py  ittapi_native_mock.py  patch.py
python/utest/pyitt_native_mock/: __init__.py  patch.py  pyitt_native_mock.py
rust/: .gitignore  CHANGELOG.md  Cargo.toml  clippy.toml  deny.toml
rust/ittapi/: Cargo.toml  README.md
rust/ittapi-sys/: Cargo.toml  README.md  build.rs  strnlen_s.c
rust/ittapi-sys/scripts/: copy-c-library.ps1
rust/ittapi-sys/src/: lib.rs
rust/ittapi-sys/src/freebsd/: ittnotify_bindings.rs
rust/ittapi-sys/src/linux/: ittnotify_bindings.rs  jitprofiling_bindings.rs
rust/ittapi-sys/src/macos/: ittnotify_bindings.rs  jitprofiling_bindings.rs
rust/ittapi-sys/src/openbsd/: ittnotify_bindings.rs
rust/ittapi-sys/src/windows/: ittnotify_bindings.rs  jitprofiling_bindings.rs
rust/ittapi-sys/tests/: bindgen-up-to-date.rs
rust/ittapi/src/: collection_control.rs  domain.rs  event.rs  jit.rs  lib.rs  region.rs  string.rs  task.rs  util.rs
src/: api-support.html  build.html  compile-and-link-with-itt-api.html  instrument-your-application.html  itt-api-reference.html  itt-api-support.html  ittnotify  jit-api-reference.html  jit-api-support.html  minimize-itt-api-overhead.html  overview.html  ref_collector.html  using-jit-api.html
(+119 files in other folders)
