[project]
name = "ittapi"
version = "1.2.0"
authors = [
  { name="Egor Suldin"},
]
description = "Python bindings to Intel Instrumentation and Tracing Technology (ITT) API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]

[project.urls]
"Homepage" = "https://github.com/intel/ittapi"
"Bug Tracker" = "https://github.com/intel/ittapi/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
