[package]
name = "ittapi-rs"
version = "0.1.6"
edition = "2021"
authors = [
    "Johnnie Birch <45402135+jlb6740@users.noreply.github.com>",
    "Benjamin Bouvier <public@benj.me>",
]
description = "High-level Rust bindings for ittapi"
license = "GPL-2.0-only OR BSD-3-Clause"
documentation  = "https://docs.rs/ittapi-rs"
readme = "README.md"
homepage  = "https://github.com/intel/ittapi/tree/master/ittapi-rs/ittapi"
repository = "https://github.com/intel/ittapi"
keywords = ["vtune", "profiling", "code-generation"]

[dependencies]
anyhow = "1.0.40"
ittapi-sys = { path = "../ittapi-sys", version = "0.1.6" }
log = "0.4.14"
