[package]
name = "ittapi"
version = "0.3.1"
edition = "2021"
authors = [
    "Johnnie Birch <45402135+jlb6740@users.noreply.github.com>",
    "Benjamin Bouvier <public@benj.me>",
]
description = "High-level Rust bindings for ittapi"
license = "GPL-2.0-only OR BSD-3-Clause"
documentation  = "https://docs.rs/ittapi"
readme = "README.md"
homepage  = "https://github.com/intel/ittapi/tree/master/rust/ittapi"
repository = "https://github.com/intel/ittapi"
keywords = ["vtune", "profiling", "code-generation"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.56"
ittapi-sys = { path = "../ittapi-sys", version = "0.3.1" }
log = "0.4.16"

[dev-dependencies]
scoped-env = "2.1"
